plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.umc'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.7.0'

	// spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// Json
	implementation 'org.json:json:20231013'


	//jwt
	implementation 'com.auth0:java-jwt:4.2.1'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	//oauth2Service
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//thymeleaf
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'

	// selenium
	// https://mvnrepository.com/artifact/edu.stanford.nlp/stanford-corenlp
	implementation group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '4.5.8'

	// https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.27.0'

	// https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager
	implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.9.2'

	// email smtp
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//google api
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation 'com.google.api-client:google-api-client:1.32.1'
	implementation 'com.google.oauth-client:google-oauth-client:1.32.1'
	implementation 'com.google.http-client:google-http-client-jackson2:1.40.1'

	//aws s3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
}

tasks.named('test') {
	useJUnitPlatform()
}

bootJar {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}